log
Tue 21 Mar 2023 03:48:04 PM UTC: 
 tests:  0|6
total_score: 0/70
95774f3
Tue 21 Mar 2023 03:56:34 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|5
total_score: 10/70
a7a8fe3
Tue 21 Mar 2023 04:00:31 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c37be04
Tue 21 Mar 2023 04:13:02 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
93aedb6
Tue 21 Mar 2023 04:16:42 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
513b56d
Tue 21 Mar 2023 04:18:43 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
7cbafd6
Tue 21 Mar 2023 04:19:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f650877
Tue 21 Mar 2023 04:23:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f5a14b8
Tue 21 Mar 2023 04:23:50 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
344a2df
Tue 21 Mar 2023 04:25:23 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ff06b59
Tue 21 Mar 2023 04:25:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
6fc676a
Tue 21 Mar 2023 10:00:19 PM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:64:29: error: expected ‘;’ before ‘return’
   64 |   list->current = list->tail
      |                             ^
      |                             ;
......
   70 |     return list->current->data;
      |     ~~~~~~                   
list.c:71:1: error: control reaches end of non-void function [-Werror=return-type]
   71 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
285849b
Tue 21 Mar 2023 10:00:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
ddc4f7f
Tue 21 Mar 2023 10:04:41 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ca12173
Tue 21 Mar 2023 10:29:29 PM UTC: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:78:21: error: implicit declaration of function ‘createNodo’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   78 |   Node *NuevoNodo = createNodo(data);
      |                     ^~~~~~~~~~
      |                     createNode
list.c:78:21: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
6e052df
Tue 21 Mar 2023 10:29:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
ab9c5f2
Wed 22 Mar 2023 03:04:59 AM UTC: 
 list.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
In file included from test.c:5:
list.c:124:3: error: expected identifier or ‘(’ before ‘return’
  124 |   return;
      |   ^~~~~~
list.c:127:1: error: expected identifier or ‘(’ before ‘}’ token
  127 | }
      | ^
Compilation failed
180d092
Wed 22 Mar 2023 03:06:34 AM UTC: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c:126:1: error: expected identifier or ‘(’ before ‘}’ token
  126 | }
      | ^
Compilation failed
e9a484e
